# discord-zulip-bridge

./: .env.example  .gitignore  README.md  pyproject.toml
discord_zulip_bridge/: __init__.py  __main__.py  app.py  bridge_app.py  bridge_config.py  bridge_storage.py  bridge_zulip.py  config.py  discord_bridge.py  zulip_bridge.py
